--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,12 @@
 *.exe
 *.out
 *.app
+.VSCodeCounter/2024-04-13_20-20-33/details.md
+.VSCodeCounter/2024-04-13_20-20-33/diff-details.md
+.VSCodeCounter/2024-04-13_20-20-33/diff.csv
+.VSCodeCounter/2024-04-13_20-20-33/diff.md
+.VSCodeCounter/2024-04-13_20-20-33/diff.txt
+.VSCodeCounter/2024-04-13_20-20-33/results.csv
+.VSCodeCounter/2024-04-13_20-20-33/results.json
+.VSCodeCounter/2024-04-13_20-20-33/results.md
+.VSCodeCounter/2024-04-13_20-20-33/results.txt
