--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,8 @@
 .VSCodeCounter/2024-04-13_20-20-33/results.json
 .VSCodeCounter/2024-04-13_20-20-33/results.md
 .VSCodeCounter/2024-04-13_20-20-33/results.txt
+*.md
+*.csv
+.VSCodeCounter/2024-04-14_15-08-34/diff.txt
+.VSCodeCounter/2024-04-14_15-08-34/results.json
+.VSCodeCounter/2024-04-14_15-08-34/results.txt
